--- a/CT188_Nhap mon lap trinh Web/pomodorWeb/index.html
+++ b/CT188_Nhap mon lap trinh Web/pomodorWeb/index.html
@@ -8,8 +8,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <iframe width="800" height="450" src="https://www.youtube.com/embed/UgHKb_7884o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div id = "audio">
+        <audio id="audioPlayer" controls loop>
+            <source src="audio/Relaxing_Fireplace_Sounds_cut.mp3" type="audio/mpeg">
+        </audio>
 
+
+        <label  id="labelVolume" for="Volume">Volume: <span class="titleVolume">100%</span></label><br>
+        <input type="range" min="0" max="100" value="100" name ="Volume" class="sliderVolume" id="audioVolume">
+
+    </div>
     <div id="pomodoro">
         <div class="time" id="time1">
             <label id="hours">00</label>
