--- a/CT188_Nhap mon lap trinh Web/pomodorWeb/index.html
+++ b/CT188_Nhap mon lap trinh Web/pomodorWeb/index.html
@@ -43,6 +43,13 @@
                 <input class="btn reset" type="button" value="Reset" >
             </div>
             <div id="today"></div>
+            <div class= "btnCamera ">
+                <input class="btn cam" type="button" value="Camera" >
+            </div>
+            <div id="cam">
+                <video id="video" width="640" height="480" autoplay></video>
+            </div>
+            
         </div>
     </div>  
     <script src="script.js"></script>
