--- a/CT188_Nhap mon lap trinh Web/web_form/index.html
+++ b/CT188_Nhap mon lap trinh Web/web_form/index.html
@@ -14,10 +14,10 @@
     <div id = "bodyPart">
         <div id = "form" >
             <form name="frm" method="GET" action="b.php">  
-                <div class="input First Name"> <label for="txtFirstName">First Name</label><div></div><input type="text" name="txtFirstName" value="" maxlength="50"  size="34"></div>
-                <div class="input Last Name"> <label for="txtLastName">Last Name</label><div></div> <input type="text" name="txtLastName" value="" maxlength="50" size="34"></div>
+                <div class="input First Name"> <label for="txtFirstName">First Name</label><div></div><input type="text" name="txtFirstName" value=""  maxlength="50"  size="34"></div>
+                <div class="input Last Name"> <label for="txtLastName">Last Name</label><div></div> <input type="text" name="txtLastName" value=""  maxlength="50" size="34"></div>
                 <div class="input Company"> <label for="txtCompany">Company</label><div></div> <input type="text" name="txtCompany" value="" maxlength="50" size="34"></div>
-                <div class="input Phone"> <label for="txtPhone">Phone</label><div></div> <input type="text" name="txtPhone" value="" maxlength="50" size="34"></div>
+                <div class="input Phone"> <label for="txtPhone">Phone</label><div></div> <input type="text" name="txtPhone" value="" onkeypress="return isNum(event)" maxlength="50" size="34"></div>
                 <div class="input Email"> <label for="txtEmail">Email</label><div></div> <input type="text" name="txtEmail" value="" maxlength="50" size="34"></div>
                 <div class="inputAddress"> <label for="txtAddress">Address</label><div></div> <input type="text" name="txtAddress" value="" maxlength="50" size="34"></div>   
                 <label for="dob">Day of birth</label><div></div>
