upload de on ctdl

--- a/CT188_Nhap mon lap trinh Web/pomodorWeb/index.html
+++ b/CT188_Nhap mon lap trinh Web/pomodorWeb/index.html
@@ -47,7 +47,7 @@
                 <input class="btn cam" type="button" value="Camera" >
             </div>
             <div id="cam">
-                <video id="video" width="640" height="480" autoplay></video>
+                <video id="video" width="640" height="480" ></video>
             </div>
             
         </div>
